# SqrtVINS_Windows

./: .gitignore  Windows_Run.md  readme.md
.claude/: settings.local.json
_Unity/sqrtVINS/Assets/Materials/: AnchorBlue.mat  AnchorCenter.mat  AnchorGreen.mat  AnchorRed.mat
_Unity/sqrtVINS/Assets/Plugins/Android/: AndroidManifest.xml
_Unity/sqrtVINS/Assets/Resources/: AnchorObject.prefab
_Unity/sqrtVINS/Assets/Scenes/: VIODemo.unity
_Unity/sqrtVINS/Assets/Scripts/VIO/: AndroidCameraController.cs  AndroidLibraryLoader.cs  VIOMapManager.cs  VODebugRenderer.cs  VOFeatureVisualizer.cs  VOManager.cs  VONative.cs  VOPoseDisplay.cs  VOPoseVisualizer.cs
_Unity/sqrtVINS/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
_Unity/sqrtVINS/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
config/rpng_sim/: estimator_config.yaml
config/visual_mapping/: visual_mapping_config.yaml
ov_core/src/: test_profile.cpp  test_visual_mapping.cpp  test_webcam.cpp
ov_core/src/track/: TrackBase.h
ov_core/src/unity/: AndroidImuCollector.cpp  AndroidImuCollector.h  CMakeLists.txt  Unity_Build_Guide.md  VOUnityBridge.cpp  VOUnityBridge.h  vo_unity_api.cpp  vo_unity_api.h
ov_core/src/utils/: dataset_reader.h  opencv_yaml_parse.h  print.cpp  print.h
ov_core/src/visual_odometry/: VisualOdometry.cpp  VisualOdometry.h
ov_core/src/visual_odometry/calibration/: CalibrationParser.cpp  CalibrationParser.h
ov_core/src/visual_odometry/keyframe/: KeyframeSelector.cpp  KeyframeSelector.h
ov_core/src/visual_odometry/map/: MapManager.cpp  MapManager.h
ov_core/src/visual_odometry/pose/: PoseEstimator.cpp  PoseEstimator.h
ov_core/src/visual_odometry/triangulation/: Triangulator.cpp  Triangulator.h
ov_core/src/visual_odometry/viewer/: PangolinViewer.cpp  PangolinViewer.h
ov_srvins/: CMakeLists.txt
ov_srvins/src/: test_sim_meas.cpp  test_sim_repeat.cpp
ov_srvins/src/initializer/dynamic/: DynamicInitializer.cpp
ov_srvins/src/sim/: Simulator.cpp
